styles.css/main.css
@import url('utilities.css');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  /* outline: 1px solid purple; */
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.2rem;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

body {
  color: #333;
  line-height: 1.6;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  font-family: 'Open Sans', sans-serif;
  width: 100%;
  min-height: 100vh;
  position: relative;
}

nav {
  z-index: 10000;
  display: flex;
  align-items: center;
  justify-content: space-around;
  min-height: 10vh;
  width: 100vw;
  /* position: relative; */
  position: fixed;
  top: 0;
  left: 0;
  background: #fffc00; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to left,
    #ffffff,
    #fffc00
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to left,
    #ffffff,
    #fffc00
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.nav-title {
  display: flex;
  align-items: center;
  justify-content: space-around;
  /* min-width: 20%; */
  padding: 0.5rem;
}

.logo {
  height: 100%;
  width: auto;
  margin: 0.5rem;
}

.nav-name {
  margin: 0.5rem;
}

.nav-list {
  margin: 1rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  min-width: 50%;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  margin-top: 10vh;
  width: 100%;
  position: relative;
  background: lightgray;
}

.title {
  height: 80vh;
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-start;
  border-radius: 2rem;
  margin: 2rem;
  padding: 2rem;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 3);
  letter-spacing: 0.2rem;
  /* color: purple; */
}

.profile {
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 60vh;
  max-width: 90%;
  margin: 2rem;
  padding: 2rem;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 3);
  border-radius: 2rem;
  background: #dae2f8; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to left,
    #d6a4a4,
    #dae2f8
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to left,
    #d6a4a4,
    #dae2f8
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.profile img {
  /* height: 90%;
  width: auto; */
  max-width: 50%;
  max-height: 90%;
  border-radius: 50%;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 3);
}

.about-me {
  text-align: center;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  max-width: 50%;
  height: 100%;
}

article {
  min-height: 40vh;
  min-width: 60%;
  max-width: 90%;
  margin: 2rem;
  padding: 2rem;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 3);
  border-radius: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  background: #ada996; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #eaeaea,
    #dbdbdb,
    #f2f2f2,
    #ada996
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #eaeaea,
    #dbdbdb,
    #f2f2f2,
    #ada996
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.tech-title {
  border-bottom: 4px solid purple;
  letter-spacing: 0.5rem;
  padding: 0.8rem;
}

.tech-list {
  width: 80%;
  height: 60%;
}

section {
  height: 70vh;
  width: 60%;
  max-width: 90%;
  margin: 2rem;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 3);
  border: 2px solid red;
  border-radius: 2rem;
  position: relative;
  padding: 2rem;
}

.background {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
  border-radius: 1.8rem;
  /* opacity: 0.5; */
}

.background:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
}

.section-info {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  font-weight: 900;
  /* color: white; */
}

.section-info h1,
.section-info h3,
.section-info ul {
  text-align: center;
  z-index: 100;
  color: white;
  max-width: 80%;
  letter-spacing: 0.1rem;
}

.project-btn,
.form-btn {
  z-index: 50;
  opacity: 1;
  width: 12rem;
  height: 3rem;
  padding: 1.5rem;
  margin: 1rem;
  background-color: white;
  border-radius: 900px;
  transition: transform 0.05s ease-in;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.project-btn:hover,
button:hover {
  cursor: pointer;
  transform: scale(1.1);
  color: black;
  border: 1px solid red;
}

.contact-container {
  background-color: lightcyan;
  color: #333;
  border-radius: 2rem;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
  padding: 1rem;
  margin: 2rem;
  min-width: 40vw;
  max-width: 90%;
  max-height: 80vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

form {
  max-height: 50%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

label {
  margin: 0.5rem;
  width: 60%;
  font-size: 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

input,
textarea {
  width: 100%;
  padding: 0.5rem;
  font-size: 1rem;
  margin: 0.5rem;
}

footer {
  display: flex;
  align-items: center;
  justify-content: space-around;
  min-height: 10vh;
  width: 100%;
  background: #fffc00; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to left,
    #ffffff,
    #fffc00
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to left,
    #ffffff,
    #fffc00
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.social-list {
  display: flex;
  align-items: center;
  justify-content: space-around;
  min-width: 20%;
}

li {
  transition: transform 0.1s ease-in;
  margin: 1rem;
  padding: 0.3rem;
  white-space: nowrap;
}

li:hover {
  cursor: pointer;
  transform: scale(1.2);
}

.top-button {
  border-radius: 2rem;
  position: fixed;
  bottom: 3%;
  right: 3%;
  width: 5rem;
  height: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  padding: 0.5rem;
  transition: transform 0.05s ease-in;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 3);
  opacity: 0.8;
}

.top-button:hover {
  cursor: pointer;
  transform: scale(1.1);
  background-color: black;
  color: white;
  border: 1px solid yellow;
  opacity: 1;
}

/* media queries */
@media (max-width: 1100px) {
  nav {
    flex-direction: column;
  }

  .container {
    margin-top: 15vh;
  }

  article {
    width: 90%;
  }

  section {
    min-height: 70vh;
    width: 95%;
    padding: 1rem;
  }

  .section-info h1,
  .section-info h3,
  .section-info ul {
    width: 100%;
    letter-spacing: 0.01rem;
  }

  .section-info h1 {
    font-size: 2rem;
  }

  .contact-container {
    padding: 1rem;
    margin: 2rem;
    width: 95%;
    height: 700px;
  }

  .contact-container h1 {
    font-size: 2rem;
  }
}

@media (max-width: 800px) {
  .nav-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  .container {
    margin-top: 22vh;
  }

  .title h1 {
    font-size: 1.5rem;
  }

  .profile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    height: 70vh;
    width: 95%;
    margin: 2rem;
    padding: 1rem;
  }

  .profile img {
    /* height: 90%;
    width: auto; */
    max-width: 50%;
    /* max-height: 90%; */
    max-height: auto;
  }

  .about-me {
    text-align: center;
    padding: 1rem;
    max-width: 100%;
    height: 100%;
  }

  article {
    height: 60vh;
    width: 95%;
    padding: 1rem;
  }

  .tech-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }

  footer {
    flex-direction: column;
  }
}

@media (max-width: 500px) {
  .container {
    margin-top: 27vh;
  }

  .section-info h1 {
    font-size: 1.5rem;
  }

  .section-info h3 {
    font-size: 1.1rem;
  }

  .section-info ul {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }

  section {
    height: 90vh;
  }

  .email-container h2 {
    font-size: 1rem;
  }

}

